--- a/src/component/Login/login.css
+++ b/src/component/Login/login.css
@@ -62,3 +62,12 @@ span{
 
 /* Ensure the form and its contents are centered */
 
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+.success-message {
+  color: green;
+  margin-top: 10px;
+}
