--- a/src/component/Login/login.css
+++ b/src/component/Login/login.css
@@ -71,3 +71,31 @@ span{
   color: green;
   margin-top: 10px;
 }
+
+
+
+/* Apply blur effect when loading */
+.login-container.blurred {
+  filter: blur(5px);
+  pointer-events: none; /* Prevent interactions with blurred content */
+}
+
+/* Loading overlay */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  z-index: 9999;
+}
+
+/* Loading spinner/image */
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+}
